<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="date">Today, 2015 Feb 25</string>
    <string name="imgDescription">Image</string>
    <string name="sunny">Sunny</string>
    <string name="degMax">21\u00B0</string>
    <string name="degMin">8\u00B0</string>
    <string name="currentDate">Friday, 2015 Feb 27</string>

</resources>
